# analog-device-max78000-cmake-build-system

./: .clangd  CMakeLists.txt  CMakePresets.json
MAX78000/Libraries/Boards/MAX78000/FTHR_RevA/: CMakeLists.txt
MAX78000/Libraries/CMSIS/Device/Maxim/MAX78000/: CMakeLists.txt
MAX78000/Libraries/CMSIS/Device/Maxim/MAX78000/Source/GCC/: max78000_arm.ld
MAX78000/Libraries/PeriphDrivers/: CMakeLists.txt
include/: etl_profile.h
src/: main.cpp
toolchain/: arm-none-eabi-gcc.cmake  max78000-gcc.cmake
